--- a/MechShopping.ProductAPI/MechShopping.ProductAPI.csproj
+++ b/MechShopping.ProductAPI/MechShopping.ProductAPI.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="9.0.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Utils\" />
+  </ItemGroup>
+
 </Project>
